fixed mob profile,missing title and icon spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -205,3 +205,12 @@ ul li a {
    color: black;
    background-color: grey;
 }
+
+/*............media rules..............   */
+
+@media screen and (min-width: 350px) {
+ .spacer{
+ padding-left: 5px;
+ padding-right: 5px;
+}
+}
